@@ -1,3 +1,6 @@
+5 January 2026
+fseek, ftell -> FSEEK, FTELL (Windows: > 2 GB file size)
+
 2 January 2026
 Before we had ~<> for case insensitive matching. Now we also have <> for negated case insensitive matching.
 aap:<>AAP fails, because aap and AAP match, if we ignore case differences. <> is negation.
